--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   page_transition: ^2.0.9
   dismissible_page: ^1.0.1
   simple_gradient_text: ^1.2.4
-  intro_screen_onboarding_flutter: ^1.0.0
   google_fonts: ^2.0.0
+  image_picker: ^0.8.6+3
   sizer: ^2.0.15
   get: ^4.6.5
 
