--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   image_picker: ^0.8.6+3
   sizer: ^2.0.15
   get: ^4.6.5
+  video_player: ^2.6.0
+  face_camera: ^0.0.6
+
 
 dev_dependencies:
   flutter_test:
